@@ -14,10 +14,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
-import org.cloudbus.cloudsim.core.CloudSim;
-import org.cloudbus.cloudsim.core.CloudSimTags;
-import org.cloudbus.cloudsim.core.SimEntity;
-import org.cloudbus.cloudsim.core.SimEvent;
+import org.cloudbus.cloudsim.core.*;
 import org.cloudbus.cloudsim.lists.CloudletList;
 import org.cloudbus.cloudsim.lists.VmList;
 
@@ -27,15 +24,16 @@ import org.cloudbus.cloudsim.lists.VmList;
  * 
  * @author Rodrigo N. Calheiros
  * @author Anton Beloglazov
+ * @author Remo Andreoli
  * @since CloudSim Toolkit 1.0
  */
 public class DatacenterBroker extends SimEntity {
 
 	/** The list of VMs submitted to be managed by the broker. */
-	protected List<? extends Vm> vmList;
+	protected List<? extends GuestEntity> vmList;
 
 	/** The list of VMs created by the broker. */
-	protected List<? extends Vm> vmsCreatedList;
+	protected List<? extends GuestEntity> vmsCreatedList;
 
 	/** The list of cloudlet submitted to the broker. 
          * @see #submitCloudletList(java.util.List) 
@@ -75,6 +73,9 @@ public class DatacenterBroker extends SimEntity {
          * is a datacenter id and each value is its characteristics.. */
 	protected Map<Integer, DatacenterCharacteristics> datacenterCharacteristicsList;
 
+	/** Next guest to which send the cloudlet */
+	private int guestIndex = 0;
+
 	/**
 	 * Created a new DatacenterBroker object.
 	 * 
@@ -86,21 +87,21 @@ public class DatacenterBroker extends SimEntity {
 	public DatacenterBroker(String name) throws Exception {
 		super(name);
 
-		setVmList(new ArrayList<Vm>());
-		setVmsCreatedList(new ArrayList<Vm>());
-		setCloudletList(new ArrayList<Cloudlet>());
-		setCloudletSubmittedList(new ArrayList<Cloudlet>());
-		setCloudletReceivedList(new ArrayList<Cloudlet>());
+		setGuestList(new ArrayList<>());
+		setGuestsCreatedList(new ArrayList<>());
+		setCloudletList(new ArrayList<>());
+		setCloudletSubmittedList(new ArrayList<>());
+		setCloudletReceivedList(new ArrayList<>());
 
 		cloudletsSubmitted = 0;
 		setVmsRequested(0);
 		setVmsAcks(0);
 		setVmsDestroyed(0);
 
-		setDatacenterIdsList(new LinkedList<Integer>());
-		setDatacenterRequestedIdsList(new ArrayList<Integer>());
-		setVmsToDatacentersMap(new HashMap<Integer, Integer>());
-		setDatacenterCharacteristicsList(new HashMap<Integer, DatacenterCharacteristics>());
+		setDatacenterIdsList(new LinkedList<>());
+		setDatacenterRequestedIdsList(new ArrayList<>());
+		setVmsToDatacentersMap(new HashMap<>());
+		setDatacenterCharacteristicsList(new HashMap<>());
 	}
 
 	/**
@@ -111,22 +112,21 @@ public class DatacenterBroker extends SimEntity {
 	 * @pre list !=null
 	 * @post $none
 	 */
-	public void submitVmList(List<? extends Vm> list) {
-		getVmList().addAll(list);
+	public void submitGuestList(List<? extends GuestEntity> list) {
+		getGuestList().addAll(list);
 	}
 
 	/**
-	 * This method is used to send to the broker the list of cloudlets.
+	 * This method is used to send to the broker the list of cloudlets.bindCloudletToVm
 	 * 
 	 * @param list the list
 	 * @pre list !=null
 	 * @post $none
          * 
-         * @todo The name of the method is confused with the {@link #submitCloudlets()},
+         * //@TODO The name of the method is confused with the {@link #submitCloudlets()},
          * that in fact submit cloudlets to VMs. The term "submit" is being used
          * ambiguously. The method {@link #submitCloudlets()} would be named "sendCloudletsToVMs"
-         * 
-         * The method {@link #submitVmList(java.util.List)} may have
+         * The method {@link #submitGuestList(List)} may have
          * be checked too.
 	 */
 	public void submitCloudletList(List<? extends Cloudlet> list) {
@@ -143,37 +143,36 @@ public class DatacenterBroker extends SimEntity {
 	 * @post $none
 	 */
 	public void bindCloudletToVm(int cloudletId, int vmId) {
-		CloudletList.getById(getCloudletList(), cloudletId).setVmId(vmId);
+		CloudletList.getById(getCloudletList(), cloudletId).setGuestId(vmId);
 	}
 
 	@Override
 	public void processEvent(SimEvent ev) {
-		switch (ev.getTag()) {
-		// Resource characteristics request
-			case CloudSimTags.RESOURCE_CHARACTERISTICS_REQUEST:
-				processResourceCharacteristicsRequest(ev);
-				break;
-			// Resource characteristics answer
-			case CloudSimTags.RESOURCE_CHARACTERISTICS:
-				processResourceCharacteristics(ev);
-				break;
-			// VM Creation answer
-			case CloudSimTags.VM_CREATE_ACK:
-				processVmCreate(ev);
-				break;
-			// A finished cloudlet returned
-			case CloudSimTags.CLOUDLET_RETURN:
-				processCloudletReturn(ev);
-				break;
-			// if the simulation finishes
-			case CloudSimTags.END_OF_SIMULATION:
-				shutdownEntity();
-				break;
-			// other unknown tags are processed by this method
-			default:
-				processOtherEvent(ev);
-				break;
-		}
+		CloudSimTags tag = ev.getTag();
+        // Resource characteristics request
+        if (tag == CloudActionTags.RESOURCE_CHARACTERISTICS_REQUEST) {
+            processResourceCharacteristicsRequest(ev);
+
+            // Resource characteristics answer
+        } else if (tag == CloudActionTags.RESOURCE_CHARACTERISTICS) {
+            processResourceCharacteristics(ev);
+
+            // VM Creation answer
+        } else if (tag == CloudActionTags.VM_CREATE_ACK) {
+            processVmCreateAck(ev);
+
+            // A finished cloudlet returned
+        } else if (tag == CloudActionTags.CLOUDLET_RETURN) {
+            processCloudletReturn(ev);
+
+            // if the simulation finishes
+        } else if (tag == CloudActionTags.END_OF_SIMULATION) {
+            shutdownEntity();
+
+            // other unknown tags are processed by this method
+        } else {
+            processOtherEvent(ev);
+        }
 	}
 
 	/**
@@ -188,13 +187,15 @@ public class DatacenterBroker extends SimEntity {
 		getDatacenterCharacteristicsList().put(characteristics.getId(), characteristics);
 
 		if (getDatacenterCharacteristicsList().size() == getDatacenterIdsList().size()) {
-			setDatacenterRequestedIdsList(new ArrayList<Integer>());
-			createVmsInDatacenter(getDatacenterIdsList().get(0));
+			// @TODO: should I need this?
+			// getDatacenterCharacteristicsList().clear();
+			setDatacenterRequestedIdsList(new ArrayList<>());
+			createVmsInDatacenter(getDatacenterIdsList().getFirst());
 		}
 	}
 
 	/**
-	 * Process a request for the characteristics of a PowerDatacenter.
+	 * Process a request for the characteristics of a Datacenter.
 	 * 
 	 * @param ev a SimEvent object
 	 * @pre ev != $null
@@ -202,13 +203,13 @@ public class DatacenterBroker extends SimEntity {
 	 */
 	protected void processResourceCharacteristicsRequest(SimEvent ev) {
 		setDatacenterIdsList(CloudSim.getCloudResourceList());
-		setDatacenterCharacteristicsList(new HashMap<Integer, DatacenterCharacteristics>());
+		setDatacenterCharacteristicsList(new HashMap<>());
 
-		Log.printConcatLine(CloudSim.clock(), ": ", getName(), ": Cloud Resource List received with ",
-				getDatacenterIdsList().size(), " resource(s)");
+		Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": Cloud Resource List received with ",
+				getDatacenterIdsList().size(), " datacenter(s)");
 
 		for (Integer datacenterId : getDatacenterIdsList()) {
-			sendNow(datacenterId, CloudSimTags.RESOURCE_CHARACTERISTICS, getId());
+			sendNow(datacenterId, CloudActionTags.RESOURCE_CHARACTERISTICS, getId());
 		}
 	}
 
@@ -219,27 +220,29 @@ public class DatacenterBroker extends SimEntity {
 	 * @pre ev != null
 	 * @post $none
 	 */
-	protected void processVmCreate(SimEvent ev) {
+	protected void processVmCreateAck(SimEvent ev) {
 		int[] data = (int[]) ev.getData();
 		int datacenterId = data[0];
 		int vmId = data[1];
 		int result = data[2];
 
+		GuestEntity guest = VmList.getById(getGuestList(), vmId);
+
 		if (result == CloudSimTags.TRUE) {
 			getVmsToDatacentersMap().put(vmId, datacenterId);
-			getVmsCreatedList().add(VmList.getById(getVmList(), vmId));
-			Log.printConcatLine(CloudSim.clock(), ": ", getName(), ": VM #", vmId,
-					" has been created in Datacenter #", datacenterId, ", Host #",
-					VmList.getById(getVmsCreatedList(), vmId).getHost().getId());
+			getGuestsCreatedList().add(guest);
+			Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": ", guest.getClassName(), " #", vmId,
+					" has been created in Datacenter #", datacenterId, ", ", guest.getHost().getClassName(), " #",
+					guest.getHost().getId());
 		} else {
-			Log.printConcatLine(CloudSim.clock(), ": ", getName(), ": Creation of VM #", vmId,
+			Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": Creation of ", guest.getClassName(), " #", vmId,
 					" failed in Datacenter #", datacenterId);
 		}
 
 		incrementVmsAcks();
 
 		// all the requested VMs have been created
-		if (getVmsCreatedList().size() == getVmList().size() - getVmsDestroyed()) {
+		if (getGuestsCreatedList().size() == getGuestList().size() - getVmsDestroyed()) {
 			submitCloudlets();
 		} else {
 			// all the acks received, but some VMs were not created
@@ -253,11 +256,11 @@ public class DatacenterBroker extends SimEntity {
 				}
 
 				// all datacenters already queried
-				if (getVmsCreatedList().size() > 0) { // if some vm were created
+				if (!getGuestsCreatedList().isEmpty()) { // if some vm were created
 					submitCloudlets();
 				} else { // no vms created. abort
-					Log.printLine(CloudSim.clock() + ": " + getName()
-							+ ": none of the required VMs could be created. Aborting");
+					Log.printlnConcat(CloudSim.clock(), ": ", getName(),
+							": none of the required VMs could be created. Aborting");
 					finishExecution();
 				}
 			}
@@ -274,19 +277,20 @@ public class DatacenterBroker extends SimEntity {
 	protected void processCloudletReturn(SimEvent ev) {
 		Cloudlet cloudlet = (Cloudlet) ev.getData();
 		getCloudletReceivedList().add(cloudlet);
-		Log.printConcatLine(CloudSim.clock(), ": ", getName(), ": Cloudlet ", cloudlet.getCloudletId(),
-				" received");
+		Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": ", cloudlet.getClass().getSimpleName(), " #", cloudlet.getCloudletId(),
+				" return received");
+		Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": The number of finished Cloudlets is:", getCloudletReceivedList().size());
 		cloudletsSubmitted--;
-		if (getCloudletList().size() == 0 && cloudletsSubmitted == 0) { // all cloudlets executed
-			Log.printConcatLine(CloudSim.clock(), ": ", getName(), ": All Cloudlets executed. Finishing...");
+		if (getCloudletList().isEmpty() && cloudletsSubmitted == 0) { // all cloudlets executed
+			Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": All Cloudlets executed. Finishing...");
 			clearDatacenters();
 			finishExecution();
 		} else { // some cloudlets haven't finished yet
-			if (getCloudletList().size() > 0 && cloudletsSubmitted == 0) {
+			if (!getCloudletList().isEmpty() && cloudletsSubmitted == 0) {
 				// all the cloudlets sent finished. It means that some bount
 				// cloudlet is waiting its VM be created
 				clearDatacenters();
-				createVmsInDatacenter(0);
+				createVmsInDatacenter(0); // @TODO: why datacentedId = 0 ?? should iterate over all the datacenters
 			}
 
 		}
@@ -301,16 +305,16 @@ public class DatacenterBroker extends SimEntity {
 	 * @param ev a SimEvent object
 	 * @pre ev != null
 	 * @post $none
-         * @todo to ensure the method will be overridden, it should be defined 
+         * //@TODO to ensure the method will be overridden, it should be defined
          * as abstract in a super class from where new brokers have to be extended.
 	 */
 	protected void processOtherEvent(SimEvent ev) {
 		if (ev == null) {
-			Log.printConcatLine(getName(), ".processOtherEvent(): ", "Error - an event is null.");
+			Log.printlnConcat(getName(), ".processOtherEvent(): ", "Error - an event is null.");
 			return;
 		}
 
-		Log.printConcatLine(getName(), ".processOtherEvent(): Error - event unknown by this DatacenterBroker.");
+		Log.printlnConcat(getName(), ".processOtherEvent(): Error - event unknown by this DatacenterBroker.");
 	}
 
 	/**
@@ -319,17 +323,17 @@ public class DatacenterBroker extends SimEntity {
 	 * @param datacenterId Id of the chosen Datacenter
 	 * @pre $none
 	 * @post $none
-         * @see #submitVmList(java.util.List) 
+         * @see #submitGuestList(List)
 	 */
 	protected void createVmsInDatacenter(int datacenterId) {
 		// send as much vms as possible for this datacenter before trying the next one
 		int requestedVms = 0;
 		String datacenterName = CloudSim.getEntityName(datacenterId);
-		for (Vm vm : getVmList()) {
+		for (GuestEntity vm : getGuestList()) {
 			if (!getVmsToDatacentersMap().containsKey(vm.getId())) {
-				Log.printLine(CloudSim.clock() + ": " + getName() + ": Trying to Create VM #" + vm.getId()
-						+ " in " + datacenterName);
-				sendNow(datacenterId, CloudSimTags.VM_CREATE_ACK, vm);
+				Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": Trying to Create ", vm.getClassName(),
+						" #", vm.getId(), " in ", datacenterName);
+				sendNow(datacenterId, CloudActionTags.VM_CREATE_ACK, vm);
 				requestedVms++;
 			}
 		}
@@ -348,33 +352,39 @@ public class DatacenterBroker extends SimEntity {
          * @see #submitCloudletList(java.util.List) 
 	 */
 	protected void submitCloudlets() {
-		int vmIndex = 0;
-		List<Cloudlet> successfullySubmitted = new ArrayList<Cloudlet>();
+		List<Cloudlet> successfullySubmitted = new ArrayList<>();
 		for (Cloudlet cloudlet : getCloudletList()) {
-			Vm vm;
+			GuestEntity vm;
 			// if user didn't bind this cloudlet and it has not been executed yet
-			if (cloudlet.getVmId() == -1) {
-				vm = getVmsCreatedList().get(vmIndex);
+			if (cloudlet.getGuestId() == -1) {
+				vm = getGuestsCreatedList().get(guestIndex);
 			} else { // submit to the specific vm
-				vm = VmList.getById(getVmsCreatedList(), cloudlet.getVmId());
+				vm = VmList.getById(getGuestsCreatedList(), cloudlet.getGuestId());
 				if (vm == null) { // vm was not created
-					if(!Log.isDisabled()) {				    
-					    Log.printConcatLine(CloudSim.clock(), ": ", getName(), ": Postponing execution of cloudlet ",
-							cloudlet.getCloudletId(), ": bount VM not available");
+					vm = VmList.getById(getGuestList(), cloudlet.getGuestId()); // check if exists in the submitted list
+
+					if(!Log.isDisabled()) {
+						if (vm != null) {
+							Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": Postponing execution of cloudlet ",
+									cloudlet.getCloudletId(), ": bount ", vm.getClassName(), " #", vm.getId(), " not available");
+						} else {
+							Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": Postponing execution of cloudlet ",
+									cloudlet.getCloudletId(), ": bount guest entity of id ", cloudlet.getGuestId(), " doesn't exist");
+						}
 					}
 					continue;
 				}
 			}
 
 			if (!Log.isDisabled()) {
-			    Log.printConcatLine(CloudSim.clock(), ": ", getName(), ": Sending cloudlet ",
-					cloudlet.getCloudletId(), " to VM #", vm.getId());
+				Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": Sending ", cloudlet.getClass().getSimpleName(),
+						" #", cloudlet.getCloudletId(), " to " + vm.getClassName() + " #", vm.getId());
 			}
 			
-			cloudlet.setVmId(vm.getId());
-			sendNow(getVmsToDatacentersMap().get(vm.getId()), CloudSimTags.CLOUDLET_SUBMIT, cloudlet);
+			cloudlet.setGuestId(vm.getId());
+			sendNow(getVmsToDatacentersMap().get(vm.getId()), CloudActionTags.CLOUDLET_SUBMIT, cloudlet);
 			cloudletsSubmitted++;
-			vmIndex = (vmIndex + 1) % getVmsCreatedList().size();
+			guestIndex = (guestIndex + 1) % getGuestsCreatedList().size();
 			getCloudletSubmittedList().add(cloudlet);
 			successfullySubmitted.add(cloudlet);
 		}
@@ -390,12 +400,12 @@ public class DatacenterBroker extends SimEntity {
 	 * @post $none
 	 */
 	protected void clearDatacenters() {
-		for (Vm vm : getVmsCreatedList()) {
-			Log.printConcatLine(CloudSim.clock(), ": " + getName(), ": Destroying VM #", vm.getId());
-			sendNow(getVmsToDatacentersMap().get(vm.getId()), CloudSimTags.VM_DESTROY, vm);
+		for (GuestEntity vm : getGuestsCreatedList()) {
+			Log.printlnConcat(CloudSim.clock(), ": ", getName(), ": Destroying ", vm.getClassName(), " #", vm.getId());
+			sendNow(getVmsToDatacentersMap().get(vm.getId()), CloudActionTags.VM_DESTROY, vm);
 		}
 
-		getVmsCreatedList().clear();
+		getGuestsCreatedList().clear();
 	}
 
 	/**
@@ -405,18 +415,13 @@ public class DatacenterBroker extends SimEntity {
 	 * @post $none
 	 */
 	protected void finishExecution() {
-		sendNow(getId(), CloudSimTags.END_OF_SIMULATION);
-	}
-
-	@Override
-	public void shutdownEntity() {
-		Log.printConcatLine(getName(), " is shutting down...");
+		sendNow(getId(), CloudActionTags.END_OF_SIMULATION);
 	}
 
 	@Override
 	public void startEntity() {
-		Log.printConcatLine(getName(), " is starting...");
-		schedule(getId(), 0, CloudSimTags.RESOURCE_CHARACTERISTICS_REQUEST);
+		super.startEntity();
+		schedule(getId(), 0, CloudActionTags.RESOURCE_CHARACTERISTICS_REQUEST);
 	}
 
 	/**
@@ -426,7 +431,7 @@ public class DatacenterBroker extends SimEntity {
 	 * @return the vm list
 	 */
 	@SuppressWarnings("unchecked")
-	public <T extends Vm> List<T> getVmList() {
+	public <T extends GuestEntity> List<T> getGuestList() {
 		return (List<T>) vmList;
 	}
 
@@ -436,7 +441,7 @@ public class DatacenterBroker extends SimEntity {
 	 * @param <T> the generic type
 	 * @param vmList the new vm list
 	 */
-	protected <T extends Vm> void setVmList(List<T> vmList) {
+	protected <T extends GuestEntity> void setGuestList(List<T> vmList) {
 		this.vmList = vmList;
 	}
 
@@ -510,7 +515,7 @@ public class DatacenterBroker extends SimEntity {
 	 * @return the vm list
 	 */
 	@SuppressWarnings("unchecked")
-	public <T extends Vm> List<T> getVmsCreatedList() {
+	public <T extends GuestEntity> List<T> getGuestsCreatedList() {
 		return (List<T>) vmsCreatedList;
 	}
 
@@ -520,7 +525,7 @@ public class DatacenterBroker extends SimEntity {
 	 * @param <T> the generic type
 	 * @param vmsCreatedList the vms created list
 	 */
-	protected <T extends Vm> void setVmsCreatedList(List<T> vmsCreatedList) {
+	protected <T extends GuestEntity> void setGuestsCreatedList(List<T> vmsCreatedList) {
 		this.vmsCreatedList = vmsCreatedList;
 	}
 
