@@ -12,6 +12,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.cloudbus.cloudsim.core.GuestEntity;
 import org.cloudbus.cloudsim.lists.PeList;
 
 /**
@@ -23,6 +24,7 @@ import org.cloudbus.cloudsim.lists.PeList;
  * 
  * @author Rodrigo N. Calheiros
  * @author Anton Beloglazov
+ * @author Remo Andreoli
  * @since CloudSim Toolkit 1.0
  */
 public abstract class VmScheduler {
@@ -30,30 +32,25 @@ public abstract class VmScheduler {
 	/** The PEs of the host where the scheduler is associated. */
 	private List<? extends Pe> peList;
 
-	/** The map of VMs to PEs, where each key is a VM id and each value is 
+	/** The map of VMs to PEs, where each key is a VM id and each value is
          * a list of PEs allocated to that VM. */
 	private Map<String, List<Pe>> peMap;
 
-	/** The map of VMs to MIPS, were each key is a VM id and each value is 
+	/** The map of VMs to MIPS, were each key is a VM id and each value is
          * the currently allocated MIPS from the respective PE to that VM. 
          * The PEs where the MIPS capacity is get are defined
          * in the {@link #peMap}.
-         * 
-         * @todo subclasses such as {@link VmSchedulerTimeShared} have an 
-         * {@link VmSchedulerTimeShared#mipsMapRequested} attribute that
-         * may be confused with this one. So, the name of this one
-         * may be changed to something such as allocatedMipsMap
          */
-	private Map<String, List<Double>> mipsMap;
+	private Map<String, List<Double>> mipsMapAllocated;
 
 	/** The total available MIPS that can be allocated on demand for VMs. */
-	private double availableMips;
+    private double availableMips;
 
 	/** The VMs migrating in the host (arriving). It is the list of VM ids */
-	private List<String> vmsMigratingIn;
+	private List<String> guestsMigratingIn;
 
 	/** The VMs migrating out the host (departing). It is the list of VM ids */
-	private List<String> vmsMigratingOut;
+	private List<String> guestsMigratingOut;
 
 	/**
 	 * Creates a new VmScheduler.
@@ -64,33 +61,43 @@ public abstract class VmScheduler {
 	 */
 	public VmScheduler(List<? extends Pe> pelist) {
 		setPeList(pelist);
-		setPeMap(new HashMap<String, List<Pe>>());
-		setMipsMap(new HashMap<String, List<Double>>());
+		setPeMap(new HashMap<>());
+		setMipsMapAllocated(new HashMap<>());
 		setAvailableMips(PeList.getTotalMips(getPeList()));
-		setVmsMigratingIn(new ArrayList<String>());
-		setVmsMigratingOut(new ArrayList<String>());
+		setGuestsMigratingIn(new ArrayList<>());
+		setGuestsMigratingOut(new ArrayList<>());
 	}
 
 	/**
 	 * Requests the allocation of PEs for a VM.
-	 * 
-	 * @param vm the vm
-	 * @param mipsShare the list of MIPS share to be allocated to a VM
+	 *
+	 * @param guest     the vm
+	 * @param mipsShareRequested the list of MIPS share to be allocated to a VM
 	 * @return $true if this policy allows a new VM in the host, $false otherwise
 	 * @pre $none
 	 * @post $none
 	 */
-	public abstract boolean allocatePesForVm(Vm vm, List<Double> mipsShare);
+	public abstract boolean allocatePesForGuest(GuestEntity guest, List<Double> mipsShareRequested);
+
+	@Deprecated
+	public boolean allocatePesForVm(Vm vm, List<Double> mipsShare) {
+		return allocatePesForGuest(vm, mipsShare);
+	}
 
 	/**
 	 * Releases PEs allocated to a VM. After that, the PEs may be used
-         * on demand by other VMs.
-	 * 
-	 * @param vm the vm
+	 * on demand by other VMs.
+	 *
+	 * @param guest the vm
 	 * @pre $none
 	 * @post $none
 	 */
-	public abstract void deallocatePesForVm(Vm vm);
+	public abstract void deallocatePesForGuest(GuestEntity guest);
+
+	@Deprecated
+	public void deallocatePesForVm(Vm vm) {
+		deallocatePesForGuest(vm);
+	}
 
 	/**
 	 * Releases PEs allocated to all the VMs of the host the VmScheduler is associated to.
@@ -99,51 +106,71 @@ public abstract class VmScheduler {
 	 * @pre $none
 	 * @post $none
 	 */
-	public void deallocatePesForAllVms() {
-		getMipsMap().clear();
+	public void deallocatePesForAllGuests() {
+		getMipsMapAllocated().clear();
 		setAvailableMips(PeList.getTotalMips(getPeList()));
 		for (Pe pe : getPeList()) {
-			pe.getPeProvisioner().deallocateMipsForAllVms();
+			pe.getPeProvisioner().deallocateMipsForAllGuests();
 		}
+	}
+
+	@Deprecated
+	public void deallocatePesForAllVms() {
+		deallocatePesForAllGuests();
 	}
 
 	/**
 	 * Gets the pes allocated for a vm.
-	 * 
-	 * @param vm the vm
+	 *
+	 * @param guest the vm
 	 * @return the pes allocated for the given vm
 	 */
+	public List<Pe> getPesAllocatedForGuest(GuestEntity guest) {
+		return getPeMap().get(guest.getUid());
+	}
+
+	@Deprecated
 	public List<Pe> getPesAllocatedForVM(Vm vm) {
-		return getPeMap().get(vm.getUid());
+		return getPesAllocatedForGuest(vm);
 	}
 
 	/**
 	 * Returns the MIPS share of each host's Pe that is allocated to a given VM.
-	 * 
-	 * @param vm the vm
-	 * @return an array containing the amount of MIPS of each pe that is available to the VM
+	 *
+	 * @param guest the vm
+	 * @return a list containing the amount of MIPS of each pe that is available to the VM
 	 * @pre $none
 	 * @post $none
 	 */
+	public List<Double> getAllocatedMipsForGuest(GuestEntity guest) {
+		return getMipsMapAllocated().get(guest.getUid());
+	}
+
+	@Deprecated
 	public List<Double> getAllocatedMipsForVm(Vm vm) {
-		return getMipsMap().get(vm.getUid());
+		return getAllocatedMipsForGuest(vm);
 	}
 
 	/**
 	 * Gets the total allocated MIPS for a VM along all its allocated PEs.
-	 * 
-	 * @param vm the vm
+	 *
+	 * @param guest the vm
 	 * @return the total allocated mips for the vm
 	 */
-	public double getTotalAllocatedMipsForVm(Vm vm) {
+	public double getTotalAllocatedMipsForGuest(GuestEntity guest) {
 		double allocated = 0;
-		List<Double> mipsMap = getAllocatedMipsForVm(vm);
+		List<Double> mipsMap = getAllocatedMipsForGuest(guest);
 		if (mipsMap != null) {
 			for (double mips : mipsMap) {
 				allocated += mips;
 			}
 		}
 		return allocated;
+	}
+
+	@Deprecated
+	public double getTotalAllocatedMipsForVm(Vm vm) {
+		return getTotalAllocatedMipsForGuest(vm);
 	}
 
 	/**
@@ -153,7 +180,7 @@ public abstract class VmScheduler {
 	 */
 	public double getMaxAvailableMips() {
 		if (getPeList() == null) {
-			Log.printLine("Pe list is empty");
+			Log.println("Pe list is empty");
 			return 0;
 		}
 
@@ -172,129 +199,45 @@ public abstract class VmScheduler {
 	 * Returns PE capacity in MIPS.
 	 * 
 	 * @return mips
-         * @todo It considers that all PEs have the same capacity,
+         * //@TODO It considers that all PEs have the same capacity,
          * what has been shown doesn't be assured. The peList
          * received by the VmScheduler can be heterogeneous PEs.
 	 */
 	public double getPeCapacity() {
 		if (getPeList() == null) {
-			Log.printLine("Pe list is empty");
+			Log.println("Pe list is empty");
 			return 0;
 		}
-		return getPeList().get(0).getMips();
+		return getPeList().getFirst().getMips();
 	}
 
-	/**
-	 * Gets the pe list.
-	 * 
-	 * @param <T> the generic type
-	 * @return the pe list
-         * @todo The warning have to be checked 
-         * 
-	 */
-	@SuppressWarnings("unchecked")
-	public <T extends Pe> List<T> getPeList() {
-		return (List<T>) peList;
-	}
+	public List<? extends Pe> getPeList() { return peList; }
+	protected void setPeList(List<? extends Pe> peList) { this.peList = peList; }
 
-	/**
-	 * Sets the pe list.
-	 * 
-	 * @param <T> the generic type
-	 * @param peList the pe list
-	 */
-	protected <T extends Pe> void setPeList(List<T> peList) {
-		this.peList = peList;
-	}
+	public Map<String, List<Pe>> getPeMap() { return peMap; }
+	protected void setPeMap(Map<String, List<Pe>> peMap) { this.peMap = peMap; }
 
-	/**
-	 * Gets the mips map.
-	 * 
-	 * @return the mips map
-	 */
-	protected Map<String, List<Double>> getMipsMap() {
-		return mipsMap;
-	}
+	public Map<String, List<Double>> getMipsMapAllocated() { return mipsMapAllocated; }
+	protected void setMipsMapAllocated(Map<String, List<Double>> mipsMapAllocated) { this.mipsMapAllocated = mipsMapAllocated; }
 
-	/**
-	 * Sets the mips map.
-	 * 
-	 * @param mipsMap the mips map
-	 */
-	protected void setMipsMap(Map<String, List<Double>> mipsMap) {
-		this.mipsMap = mipsMap;
-	}
+	public double getAvailableMips() { return availableMips; }
+	protected void setAvailableMips(double availableMips) { this.availableMips = availableMips; }
 
-	/**
-	 * Gets the free mips.
-	 * 
-	 * @return the free mips
-	 */
-	public double getAvailableMips() {
-		return availableMips;
+	public List<String> getGuestsMigratingIn() {
+		return guestsMigratingIn;
 	}
+	protected void setGuestsMigratingIn(List<String> guestsMigratingIn) { this.guestsMigratingIn = guestsMigratingIn; }
 
-	/**
-	 * Sets the free mips.
-	 * 
-	 * @param availableMips the new free mips
-	 */
-	protected void setAvailableMips(double availableMips) {
-		this.availableMips = availableMips;
-	}
+	public List<String> getGuestsMigratingOut() { return guestsMigratingOut; }
+	protected void setGuestsMigratingOut(List<String> guestsMigratingOut) { this.guestsMigratingOut = guestsMigratingOut; }
 
-	/**
-	 * Gets the vms migrating out.
-	 * 
-	 * @return the vms in migration
-	 */
-	public List<String> getVmsMigratingOut() {
-		return vmsMigratingOut;
-	}
+	@Deprecated
+	public List<String> getVmsMigratingIn() { return getGuestsMigratingIn(); }
 
-	/**
-	 * Sets the vms migrating out.
-	 * 
-	 * @param vmsInMigration the new vms migrating out
-	 */
-	protected void setVmsMigratingOut(List<String> vmsInMigration) {
-		vmsMigratingOut = vmsInMigration;
-	}
 
-	/**
-	 * Gets the vms migrating in.
-	 * 
-	 * @return the vms migrating in
-	 */
-	public List<String> getVmsMigratingIn() {
-		return vmsMigratingIn;
-	}
+	@Deprecated
+	public List<String> getVmsMigratingOut() { return getGuestsMigratingOut(); }
 
-	/**
-	 * Sets the vms migrating in.
-	 * 
-	 * @param vmsMigratingIn the new vms migrating in
-	 */
-	protected void setVmsMigratingIn(List<String> vmsMigratingIn) {
-		this.vmsMigratingIn = vmsMigratingIn;
-	}
-
-	/**
-	 * Gets the pe map.
-	 * 
-	 * @return the pe map
-	 */
-	public Map<String, List<Pe>> getPeMap() {
-		return peMap;
-	}
-
-	/**
-	 * Sets the pe map.
-	 * 
-	 * @param peMap the pe map
-	 */
-	protected void setPeMap(Map<String, List<Pe>> peMap) {
-		this.peMap = peMap;
-	}
-
+	@Deprecated
+	public Map<String, List<Double>> getMipsMap() { return mipsMapAllocated; }
 }
